# docs/swagger.json
@@ -93,6 +93,86 @@
                 }
             }
         },
+        "/job/:id/applications": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "get job application by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "application"
+                ],
+                "summary": "get job application",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "job application id is required",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/job/:id/status": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "accept/reject job application",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "application"
+                ],
+                "summary": "updating a job application status",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "job application id is requried",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "job status  body is required",
+                        "name": "jobapplication",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.AppilicationStatusDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/job/apply": {
             "post": {
                 "security": [
@@ -456,6 +536,18 @@
                 },
                 "userID": {
                     "description": "define your application struct here",
+                    "type": "string"
+                }
+            }
+        },
+        "dto.AppilicationStatusDto": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "status": {
+                    "description": "accepted rejected",
                     "type": "string"
                 }
             }
